# weacher_cli_demo_rs

./: Cargo.toml  README.md
src/: main.rs
