[package]
name = "weacher_cli"
version = "0.1.0"
authors = ["thomas yang <ywjno.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
exitfailure = "0.5.1"
failure = "0.1.8"
serde = "1.0.130"
serde_json = "1.0.67"
serde_derive = "1.0.130"
reqwest = {version = "0.11.4", features = ["json"]}
tokio = {version = "1.10.1", features = ["full"]}
chrono = "0.4.19"
